syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.sep3.grpc";
option java_outer_classname = "UserServiceProto";


service UserService {
  rpc GetUserByEmail(UserByEmailRequest) returns (UserResponse);
}
message UserByEmailRequest {
  string email = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string hashedPassword = 3;
  string role = 4;
}


